Ensure waresContent has minimum height on mobile

--- a/themes/san-diego/source/styles/_wares.scss
+++ b/themes/san-diego/source/styles/_wares.scss
@@ -15,7 +15,7 @@
 
         @media screen and (max-width: variables.$mobile-breakpoint) {
                 padding: 0;
-                min-height: 0;
+                min-height: 70dvh;
         }
 }
 
